# StudySpot-backend-django

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yml
app/: db.sqlite3  manage.py
app/StudySpot/: asgi.py  settings.py  urls.py  wsgi.py
app/notification/: README.md  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
app/notification/management/commands/: create_notifications.py
app/notification/migrations/: 0001_initial.py
app/reservation/: README.md  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/reservation/management/commands/: check_expired_reservations.py  create_reservations.py
app/reservation/migrations/: 0001_initial.py
app/seat/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/seat/management/commands/: populate_seats.py
app/seat/migrations/: 0001_initial.py
app/study_room/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/study_room/migrations/: 0001_initial.py  0002_alter_department_options_alter_studyroom_options.py
app/study_statistics/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/study_statistics/migrations/: 0001_initial.py
app/system_settings/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/system_settings/migrations/: 0001_initial.py
app/user/: admin.py  models.py  serializers.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_customuser_favorite_seats.py  0003_remove_customuser_favorite_seats.py
(+2 files in other folders)
