[project]
name = "studyspot-backend-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
